[profile.release]
overflow-checks = true

[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/compiler",
    "crates/delegator",
    "crates/executor",
    "crates/peer",
    "crates/prover",
    "crates/runner",
    "crates/tests",

]
exclude = []

[workspace.package]
description = "A shared peer-to-peer network of Zero-Knowledge Provers"
edition = "2021"
homepage = "https://docs.zetina.iosis.tech/"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/iosis-tech/zetina"
version = "0.1.3"

[workspace.dependencies]
async-process = "2.2.0"
async-stream = "0.3.5"
bincode = "1.3"
cairo-proof-parser = { git = "https://github.com/Okm165/cairo-proof-parser", rev = "97a04bbee07330311b38d6f4cecfed3acb237626" }
cairo-vm = { git = "https://github.com/lambdaclass/cairo-vm.git", tag = "v1.0.0-rc3" }
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
hex = "0.4.3"
itertools = "0.12.1"
libp2p = { version = "0.53.2", features = [
    "ecdsa",
    "tokio",
    "gossipsub",
    "kad",
    "mdns",
    "noise",
    "macros",
    "tcp",
    "yamux",
    "quic",
] }
num-bigint = "0.4.4"
proptest = "1.4.0"
proptest-derive = "0.4.0"
rand = "0.8.5"
serde = "1.0.197"
serde_json = "1.0.115"
serde_with = "3.7.0"
starknet = "0.10.0"
starknet-crypto = "0.6.2"
strum = { version = "0.26", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0.58"
tokio = { version = "1.36", features = ["full"] }
tokio-util = "0.7.10"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tonic = "0.11.0"
prost = "0.12"
prost-types = "0.12"
tonic-build = "0.11.0"
tonic-health = "0.11.0"
tokio-stream = "0.1.15"

zetina-common = { path = "crates/common" }
zetina-compiler = { path = "crates/compiler" }
zetina-delegator = { path = "crates/delegator" }
zetina-executor = { path = "crates/executor" }
zetina-peer = { path = "crates/peer" }
zetina-prover = { path = "crates/prover" }
zetina-runner = { path = "crates/runner" }
zetina-tests = { path = "crates/tests" }