[package]
name = "sharp-p2p-common"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode.workspace = true
cairo-felt.workspace = true
futures.workspace= true
hex.workspace = true
libp2p.workspace = true
libsecp256k1.workspace = true
num-bigint.workspace = true
serde_json.workspace = true
serde.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
