[package]
name = "sharp-p2p-common"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode.workspace = true
cairo-felt.workspace = true
futures.workspace = true
hex.workspace = true
libp2p.workspace = true
num-bigint.workspace = true
proptest-derive.workspace = true
proptest.workspace = true
serde_json.workspace = true
serde_with.workspace = true
serde.workspace = true
starknet-crypto.workspace = true
starknet.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
