[package]
name = "sharp-p2p-compiler"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-process.workspace = true
cairo-proof-parser.workspace = true
futures.workspace = true
hex.workspace = true
itertools.workspace = true
libp2p.workspace = true
rand.workspace = true
serde_json.workspace = true
serde.workspace = true
sharp-p2p-common.workspace = true
starknet-crypto.workspace = true
starknet.workspace = true
strum.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
zip-extensions.workspace = true
