[package]
name = "sharp-p2p-delegator"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util.workspace = true
libp2p.workspace = true
sharp-p2p-common.workspace = true
sharp-p2p-peer.workspace = true
sharp-p2p-compiler.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
starknet.workspace = true
serde_json.workspace = true
futures.workspace = true