[package]
name = "zetina-executor"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures.workspace = true
hex.workspace = true
libp2p.workspace = true
serde_json.workspace = true
zetina-common.workspace = true
zetina-peer.workspace = true
zetina-prover.workspace = true
zetina-runner.workspace = true
tokio.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true
starknet.workspace = true
tonic.workspace = true
prost.workspace = true
async-stream.workspace = true
tokio-util.workspace = true
tokio-stream.workspace = true
thiserror.workspace = true
tonic-health.workspace = true

[build-dependencies]
tonic-build.workspace = true