[package]
name = "sharp-p2p-peer"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream.workspace = true
futures.workspace = true
libp2p.workspace = true
starknet.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true