[package]
name = "sharp-p2p-peer"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-stream.workspace = true
futures.workspace = true
libp2p.workspace = true
starknet.workspace = true
tokio-util.workspace = true
tokio.workspace = true
tracing.workspace = true
sharp-p2p-common.workspace = true
