[package]
name = "zetina-prover"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex.workspace = true
libp2p.workspace = true
async-process.workspace = true
futures.workspace= true
itertools.workspace = true
serde_json.workspace = true
serde.workspace = true
zetina-common.workspace = true
tempfile.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true

[features]
full_test = []