[package]
name = "sharp-p2p-tests"
version.workspace = true
edition.workspace = true
repository.workspace = true
license-file.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
futures.workspace = true
libp2p.workspace = true
rand.workspace = true
sharp-p2p-compiler.workspace = true
sharp-p2p-prover.workspace = true
sharp-p2p-runner.workspace = true
starknet-crypto.workspace = true
starknet.workspace = true
tokio.workspace = true

[features]
full_test = []