[package]
name = "zetina-tests"
description.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme = "README.md"
repository.workspace = true
version.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
futures.workspace = true
libp2p.workspace = true
rand.workspace = true
zetina-compiler.workspace = true
zetina-prover.workspace = true
zetina-runner.workspace = true
starknet-crypto.workspace = true
starknet.workspace = true
tokio.workspace = true

[features]
full_test = []